--- a/task/build-helm-chart-oci-ta/0.1/build-helm-chart-oci-ta.yaml
+++ b/task/build-helm-chart-oci-ta/0.1/build-helm-chart-oci-ta.yaml
@@ -144,10 +144,13 @@ spec:
 
         dest="oci://${REPO%/*}"
 
-        output=$(
-          helm push "$chart_name"-"$chart_version".tgz "$dest" \
-            --registry-config ./scoped_authfile.json 2>&1
-        )
+        echo "Pushing image to registry"
+        if ! output="$(retry helm push "$chart_name"-"$chart_version".tgz "$dest" \
+          --registry-config ./scoped_authfile.json 2>&1)"; then
+          echo "Failed to push image to registry"
+          exit 1
+        fi
+
         pushed=$(echo "$output" | grep "Pushed" | awk '{print $2}')
         digest=$(echo "$output" | grep "Digest" | awk '{print $2}')
 
