--- a/task/push-dockerfile-oci-ta/0.1/push-dockerfile-oci-ta.yaml
+++ b/task/push-dockerfile-oci-ta/0.1/push-dockerfile-oci-ta.yaml
@@ -127,12 +127,16 @@ spec:
         dockerfile_for_upload_path=/tmp/Dockerfile
         cp "$dockerfile_path" "$dockerfile_for_upload_path"
         cd "$(dirname $dockerfile_for_upload_path)"
-        retry oras push --no-tty \
+        echo "Pushing Dockerfile to registry"
+        if ! retry oras push --no-tty \
           --format json \
           --registry-config "$auth_json" \
           --artifact-type "$ARTIFACT_TYPE" \
           "$dockerfile_image" "$(basename $dockerfile_for_upload_path)" |
-          yq '.reference' | tr -d '\r\n' >"$IMAGE_REF_RESULT"
+          yq '.reference' | tr -d '\r\n' >"$IMAGE_REF_RESULT"; then
+          echo "Failed to push Dockerfile to registry"
+          exit 1
+        fi
       computeResources:
         limits:
           memory: 256Mi
