--- a/task/push-dockerfile/0.1/push-dockerfile.yaml
+++ b/task/push-dockerfile/0.1/push-dockerfile.yaml
@@ -108,12 +108,17 @@ spec:
       dockerfile_for_upload_path=/tmp/Dockerfile
       cp "$dockerfile_path" "$dockerfile_for_upload_path"
       cd "$(dirname $dockerfile_for_upload_path)"
-      retry oras push --no-tty \
+      echo "Pushing Dockerfile to registry"
+      if ! retry oras push --no-tty \
         --format json \
         --registry-config "$auth_json" \
         --artifact-type "$ARTIFACT_TYPE" \
         "$dockerfile_image" "$(basename $dockerfile_for_upload_path)" \
         | yq '.reference' | tr -d '\r\n' >"$IMAGE_REF_RESULT"
+      then
+        echo "Failed to push Dockerfile to registry"
+        exit 1
+      fi
 
   workspaces:
   - name: workspace
