--- a/task/sast-coverity-check/0.3/patch.yaml
+++ b/task/sast-coverity-check/0.3/patch.yaml
@@ -512,13 +512,22 @@
         set -x
         UPLOAD_FILE="$1"
         MEDIA_TYPE="$2"
-        retry oras attach --no-tty --registry-config "${HOME}/auth.json" --artifact-type "${MEDIA_TYPE}" "${IMAGE_URL}@${IMAGE_DIGEST}" "${UPLOAD_FILE}:${MEDIA_TYPE}"
+        oras attach --no-tty --registry-config "${HOME}/auth.json" --artifact-type "${MEDIA_TYPE}" "${IMAGE_URL}@${IMAGE_DIGEST}" "${UPLOAD_FILE}:${MEDIA_TYPE}"
       )
 
       echo "Attaching scan results to ${IMAGE_URL}"
-      upload_file "coverity-results.sarif" "application/sarif+json"
+      if ! retry upload_file "coverity-results.sarif" "application/sarif+json"
+      then
+        echo "Failed to attach scan results to ${IMAGE_URL}"
+        exit 1
+      fi
 
       # upload excluded-findings.json if enabled
       if [ -f "excluded-findings.json" ]; then
-        upload_file "excluded-findings.json" "application/json"
+        echo "Attaching excluded findings to ${IMAGE_URL}"
+        if ! retry upload_file "excluded-findings.json" "application/json"
+        then
+          echo "Failed to attach excluded findings to ${IMAGE_URL}"
+          exit 1
+        fi
       fi
