--- a/task/sbom-json-check/0.2/sbom-json-check.yaml
+++ b/task/sbom-json-check/0.2/sbom-json-check.yaml
@@ -76,8 +76,8 @@ spec:
           echo "arch sha is $arch_sha"
 
           echo "Running \"oc image extract\" on image of arch $arch"
-          retry oc image extract --registry-config ~/.docker/config.json "$arch_imageanddigest" --path="/root/buildinfo/content_manifests/*:/manifests/${destination}" --filter-by-os="linux/${arch}"
-          if [ $? -ne 0 ]; then
+          if ! retry oc image extract --registry-config ~/.docker/config.json "$arch_imageanddigest" --path="/root/buildinfo/content_manifests/*:/manifests/${destination}" --filter-by-os="linux/${arch}"
+          then
             echo "Failed to extract manifests from image $arch_imageanddigest of arch $arch."
             note="Task $(context.task.name) failed: Failed to extract manifests from image ${arch_imageanddigest} with oc extract. For details, check Tekton task log."
             ERROR_OUTPUT=$(make_result_json -r "ERROR" -t "$note")
